welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:4: error: not found: value Buzz
  else if (a%5==0){return Buzz}
                          ^